--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
   </developers>
 
   <properties>
+    <version.guava>29.0-jre</version.guava>
     <version.log4j>2.13.0</version.log4j>
     <version.sfdc>48.1.0</version.sfdc>
 
@@ -47,6 +48,13 @@
       <groupId>com.force.api</groupId>
       <artifactId>force-metadata-api</artifactId>
       <version>${version.sfdc}</version>
+    </dependency>
+
+    <!-- connection caching -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${version.guava}</version>
     </dependency>
 
     <!-- logging -->
