--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.impactupgrade.integration</groupId>
   <artifactId>salesforce-java-tools</artifactId>
-  <version>0.2.3-SNAPSHOT</version>
+  <version>0.2.3.Final</version>
 
   <name>salesforce-java-tools</name>
   <description>TODO</description>
