--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
   </scm>
   <licenses>
     <license>
-      <name>Apache License 2.0</name>
-      <url>https://github.com/impactupgrade/salesforce-java-tools/blob/master/LICENSE</url>
+      <name>GNU Affero General Public License</name>
+      <url>https://github.com/impactupgrade/salesforce-java-tools/blob/master/agpl-3.0.txt</url>
     </license>
   </licenses>
   <developers>
